--- a/views/pd/monthlyProgress/monthlyProgressCustomTable.ejs
+++ b/views/pd/monthlyProgress/monthlyProgressCustomTable.ejs
@@ -1,5 +1,5 @@
 <%if (records.length >0){ %>
-    <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
+    <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
         <thead>
         <tr>
             <th>ক্যাটাগরি নাম</th>
@@ -28,7 +28,7 @@
         <% records.forEach(function(row){ %>
 
             <%
-                const currentMonth = moment().format("MMM-YYYY").toLowerCase();
+                const currentMonth = selectedDate
                 var startRange = "";
                 var endRange = "";
 
@@ -46,7 +46,7 @@
 
                 // Previous Economic year
 
-                if (moment('nov-2020').format("M") < 7){
+                if (moment().format("M") < 7){
                     prevEconomicStart = "jul"+"-"+moment().subtract(2, "year").format('yyyy')
                     prevEconomicEnd = "jul"+"-"+moment().subtract(1, "year").format('yyyy')
                 }else{
@@ -59,11 +59,20 @@
                 var previousMonthProduction = 0;
                 const currentProd = JSON.parse(row.productionCurrent)
                 currentProd.forEach(function(prodCurrent){
-                    if ( prodCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                    if ( prodCurrent.time === selectedDate ) {
                         currentProductionSum += parseInt(prodCurrent.amount)
                     }
-                    else if ( moment( prodCurrent.time ).isSameOrAfter(startRange) &&  moment( prodCurrent.time ).isSameOrBefore(endRange) ){
+                    else if ( moment( prodCurrent.time ).isBefore(selectedDate) && moment( prodCurrent.time ).isSameOrAfter(startRange) &&  moment( prodCurrent.time ).isSameOrBefore(endRange) ){
                         previousMonthProduction += parseInt(prodCurrent.amount)
+                    }
+                })
+
+                // উৎপাদন (লক্ষ্যমাত্রা) *********
+                var productionTargetSum = 0;
+                const TargetProduction = JSON.parse(row.productionTarget)
+                TargetProduction.forEach(function(prodTarget){
+                    if ( moment(currentMonth).isAfter(prodTarget.startTime) &&  moment(currentMonth).isBefore(prodTarget.endTime) ){
+                        productionTargetSum += parseInt(prodTarget.amount)
                     }
                 })
 
@@ -80,7 +89,7 @@
                 var daePraptiSum = 0;
                 const currentDaePrapti = JSON.parse(row.daePrapti)
                 currentDaePrapti.forEach(function(daePraptiCurrent){
-                    if ( daePraptiCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                    if ( daePraptiCurrent.time === selectedDate ) {
                         daePraptiSum += parseInt(daePraptiCurrent.amount)
                     }
                 })
@@ -98,10 +107,10 @@
                 var previousMonthBitoronSum = 0;
                 const currBitoron = JSON.parse(row.bitoronCurrentMonth)
                 currBitoron.forEach(function(BitoCurrent){
-                    if ( BitoCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                    if ( BitoCurrent.time === selectedDate ) {
                         currentBitoronSum += parseInt(BitoCurrent.amount)
                     }
-                    else if ( moment( BitoCurrent.time ).isAfter(startRange) &&  moment( BitoCurrent.time ).isBefore(endRange) ){
+                    else if ( moment( BitoCurrent.time ).isBefore(selectedDate) && moment( BitoCurrent.time ).isAfter(startRange) &&  moment( BitoCurrent.time ).isBefore(endRange) ){
                         previousMonthBitoronSum += parseInt(BitoCurrent.amount)
                     }
                 })
@@ -119,7 +128,7 @@
                 var currentDaeProdanSum = 0;
                 const currDaeProdan = JSON.parse(row.daeProdan)
                 currDaeProdan.forEach(function(DaeProdanCurrent){
-                    if ( DaeProdanCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                    if ( DaeProdanCurrent.time === selectedDate ) {
                         currentDaeProdanSum += parseInt(DaeProdanCurrent.amount)
                     }
                 })
@@ -128,7 +137,7 @@
                 var currentMritoSum = 0;
                 const currMrito = JSON.parse(row.deadWriteup)
                 currMrito.forEach(function(MritoCurrent){
-                    if ( MritoCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                    if ( MritoCurrent.time === selectedDate ) {
                         currentMritoSum += parseInt(MritoCurrent.amount)
                     }
                 })
@@ -137,7 +146,7 @@
                 var currentMojudSum = 0;
                 const currMojud = JSON.parse(row.mojud)
                 currMojud.forEach(function(MojudCurrent){
-                    if ( MojudCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                    if ( MojudCurrent.time === selectedDate ) {
                         currentMojudSum += parseInt(MojudCurrent.amount)
                     }
                 })
@@ -146,7 +155,7 @@
                 var montobboSum = "";
                 const currMontobbo = JSON.parse(row.comment)
                 currMontobbo.forEach(function(MontobboCurrent){
-                    if ( MontobboCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                    if ( MontobboCurrent.time === selectedDate ) {
                         montobboSum = MontobboCurrent.msg
                     }
                 })
@@ -158,22 +167,20 @@
                 <td><%= row.subCategory %></td>
                 <td><%= row.biboron %></td>
                 <td><%= row.breed %></td>
-                <td><%= new Number(row.productionTarget).toLocaleString("bn-BD") %></td>
-                <td>
-                    <%= new Number(currentProductionSum).toLocaleString("bn-BD") %>
-                </td>
+                <td><%= new Number(productionTargetSum).toLocaleString("bn-BD") %></td>
+                <td><%= new Number(currentProductionSum).toLocaleString("bn-BD") %></td>
                 <td> <%= new Number(previousMonthProduction).toLocaleString("bn-BD") %> </td>
-                <td> <%= new Number(totalProductionSum).toLocaleString("bn-BD") %> </td>
+                <td> <%= new Number(currentProductionSum + previousMonthProduction).toLocaleString("bn-BD") %> </td>
                 <td> <%= new Number(daePraptiSum).toLocaleString("bn-BD") %> </td>
                 <td> <%= new Number(prevYearJer).toLocaleString("bn-BD") %> </td>
-                <td> <%= new Number(totalProductionSum + daePraptiSum + prevYearJer).toLocaleString("bn-BD") %> </td>
+                <td> <%= new Number(currentProductionSum + previousMonthProduction + daePraptiSum + prevYearJer).toLocaleString("bn-BD") %> </td>
                 <td><%= new Number(currentBitoronSum).toLocaleString("bn-BD") %></td>
                 <td><%= new Number(previousMonthBitoronSum).toLocaleString("bn-BD") %></td>
-                <td><%= new Number(totalBitoronSum).toLocaleString("bn-BD") %></td>
+                <td><%= new Number(currentBitoronSum + previousMonthBitoronSum).toLocaleString("bn-BD") %></td>
                 <td><%= new Number(currentDaeProdanSum).toLocaleString("bn-BD") %></td>
                 <td><%= new Number(currentMritoSum).toLocaleString("bn-BD") %></td>
                 <td><%= new Number(currentDaeProdanSum + currentMritoSum).toLocaleString("bn-BD") %></td>
-                <td><%= new Number(currentMojudSum).toLocaleString("bn-BD") %></td>
+                <td><%= new Number((currentProductionSum + previousMonthProduction + daePraptiSum + prevYearJer)-(currentDaeProdanSum + currentMritoSum)).toLocaleString("bn-BD") %></td>
                 <td><%= montobboSum %></td>
                 <td><a class="btn btn-primary btn-xs" href="/center/monthlyProgressEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
                 </td>
