--- a/views/pd/monthlyProgress/monthlyProgress.ejs
+++ b/views/pd/monthlyProgress/monthlyProgress.ejs
@@ -1,4 +1,9 @@
 <%- include('../../includes/header')-%>
+<style>
+    .ui-datepicker-calendar {
+        display: none;
+    }
+</style>
         <div id="wrapper" class="wrapper" >
             <%- include('../../includes/topbar')-%>
             <div class="page-wrap">
@@ -6,23 +11,41 @@
                 <div class="main-content">
                     <div class="container-fluid">
                         <div class="row clearfix">
-                            <div class="col-md-10">
+                            <div class="col-md-10"></div>
+                            <div class="col-md-2">
+                                <div class="row">
+                                    <div class="col">
+<!--                                        <input name="startDate" id="startDate" class="date-picker year form-control" placeholder="Date" autocomplete="off"/>-->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
                                 <h1 class="text-center"><%= title %></h1>
                             </div>
-                            <div class="col-md-4">
-                                <label >Choose a Center:</label>
-                                <select id="center" name="center" required>
-                                    <option value="">Choose center</option>
-                                    <% if (centers.length >0){ %>
-                                        <% centers.forEach(function (center) { %>
-                                            <option value="<%= center.id %>"><%= center.center %></option>
-                                        <% }) %>
-                                    <% } %>
-                                </select>
-                            </div>
-
-                            <div class="col-md-4">
-                                <input type="submit" value="Submit" id="submit" class="btn btn-success">
+                            <div class="card">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-md-3"></div>
+                                        <div class="col-md-2">
+                                            <!--                                <label >Choose a Center:</label>-->
+                                            <select id="center" name="center" class="form-control" required>
+                                                <option value="">Choose center</option>
+                                                <% if (centers.length >0){ %>
+                                                    <% centers.forEach(function (center) { %>
+                                                        <option value="<%= center.id %>"><%= center.center %></option>
+                                                    <% }) %>
+                                                <% } %>
+                                            </select>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <input name="startDate" id="startDate" class="date-picker year form-control" placeholder="Date" autocomplete="off"/>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <input type="submit" value="Submit" id="submit" class="btn btn-success">
+                                        </div>
+                                        <div class="col-md-3"></div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <!-- <div class="row mb-2">
@@ -110,8 +133,10 @@
         });
     });
 
-    $( "#content-wrapper" ).load( "no url rn",function() {
-        var year = $('#year').val();
+    $( "#wrapper" ).load( "no url rn",function() {
+        var year = moment().format("MMM-YYYY");
+        $('#startDate').val(year)
+
         var center = 0;
         $.ajax({
             type: "POST",
@@ -137,8 +162,9 @@
 
 
     $('#submit').on("click",function () {
-        var year = $('#year').val();
+        var year = $('#startDate').val();
         var center = $('#center').val();
+
         $.ajax({
             type: "POST",
             url: "/pd/monthlyProgressFilter",
@@ -158,6 +184,16 @@
                 $('#output').show();
             }
         });
+    });
+
+    $('.date-picker').datepicker( {
+        changeMonth: true,
+        changeYear: true,
+        showButtonPanel: true,
+        dateFormat: 'M-yy',
+        onClose: function(dateText, inst) {
+            $(this).datepicker('setDate', new Date(inst.selectedYear, inst.selectedMonth, 1));
+        }
     });
 
     
