workerINfo and many

--- a/views/center/apa/apaForm.ejs
+++ b/views/center/apa/apaForm.ejs
@@ -74,70 +74,69 @@
                                         </div>
                                     </div>
 
-                                    
-                                    
-                                    <div class="form-group">
-                                        <label for="achievement1" class="col-md-3 control-label">প্রকৃত অর্জন(বিগত অর্থবছর)</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" name="achievement1" placeholder="প্রকৃত অর্জন(বিগত অর্থবছর)">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="achievement2" class="col-md-3 control-label">প্রকৃত অর্জন(২০১৮-১৯)</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" name="achievement2" placeholder="প্রকৃত অর্জন(২০১৮-১৯)">
-                                        </div>
-                                    </div>
-
                                     <div class="form-group">
                                         <label for="best" class="col-md-3 control-label">লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (অসাধারণ ১০০%)</label>
                                         <div class="col-md-9">
-                                        <input type="text" class="form-control" name="best" placeholder="লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (অসাধারণ ১০০%)">
+                                        <input type="number" step="0.01" class="form-control" name="best" placeholder="লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (অসাধারণ ১০০%)">
                                         </div>
                                     </div>
                                    
                                     <div class="form-group">
                                         <label for="otiUttam" class="col-md-3 control-label">লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (অতি উত্তম ৯০%)</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="otiUttam" placeholder="লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (অতি উত্তম ৯০%)">
+                                            <input type="number" step="0.01" class="form-control" name="otiUttam" placeholder="লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (অতি উত্তম ৯০%)">
                                         </div>
                                     </div>
                                     
                                     <div class="form-group">
                                         <label for="uttam" class="col-md-3 control-label">লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (উত্তম ৮০%)</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="uttam" placeholder="লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (উত্তম ৮০%)">
+                                            <input type="number" step="0.01" class="form-control" name="uttam" placeholder="লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (উত্তম ৮০%)">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="cholti" class="col-md-3 control-label">লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (চলতি মান ৭০%)</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="cholti" placeholder="লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (চলতি মান ৭০%)">
+                                            <input type="number" step="0.01" class="form-control" name="cholti" placeholder="লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (চলতি মান ৭০%)">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="below" class="col-md-3 control-label">লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (চলতি মানের নিম্নে ৬০%)</label>
                                         <div class="col-md-9">
-                                        <input type="text" class="form-control" name="below" placeholder="লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (চলতি মানের নিম্নে ৬০%)">
+                                        <input type="number" step="0.01" class="form-control" name="below" placeholder="লক্ষ্যমাত্রা/নির্ণায়ক চলতি অর্থবছর (চলতি মানের নিম্নে ৬০%)">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="firstThree" class="col-md-3 control-label">প্রথম ত্রৈমাসিক অর্জন</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="firstThree" placeholder="প্রথম ত্রৈমাসিক অর্জন">
+                                            <input type="number" step="0.01" class="form-control" name="firstThree" placeholder="প্রথম ত্রৈমাসিক অর্জন">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="secondThree" class="col-md-3 control-label">দ্বিতীয় ত্রৈমাসিক অর্জন</label>
                                         <div class="col-md-9">
-                                        <input type="text" class="form-control" name="secondThree" placeholder="দ্বিতীয় ত্রৈমাসিক অর্জন">
+                                        <input type="number" step="0.01" class="form-control" name="secondThree" placeholder="দ্বিতীয় ত্রৈমাসিক অর্জন">
                                         </div>
                                     </div>
+
+                                    <div class="form-group">
+                                        <label for="thirdThree" class="col-md-3 control-label">তৃতীয় ত্রৈমাসিক অর্জন</label>
+                                        <div class="col-md-9">
+                                            <input type="number" step="0.01" class="form-control" name="thirdThree" placeholder="তৃতীয় ত্রৈমাসিক অর্জন">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="fourthThree" class="col-md-3 control-label">চতুর্থ ত্রৈমাসিক অর্জন</label>
+                                        <div class="col-md-9">
+                                        <input type="number" step="0.01" class="form-control" name="fourthThree" placeholder="চতুর্থ ত্রৈমাসিক অর্জন">
+                                        </div>
+                                    </div>
+
                                     <div class="form-group">
                                         <div class="col-md-9">
                                             <label for="year">বছর :</label>
