--- a/views/center/login.ejs
+++ b/views/center/login.ejs
@@ -64,6 +64,11 @@
               </div>
               <br>
 
+              <p class="text-center">For Central Admin Login only, please do signin here!</p>
+              <div class="container-login100-form-btn">
+                <a href="/pd/login" class="login100-form-btn">Sign In</a>
+               </button>
+             </div>
               
             </form>
 
