--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,7 +68,9 @@
             </div> <!-- end header-nav__content -->
 
         </nav>  <!-- end header-nav -->
-
+            <a href="/center/login" class=" btn btn--stroke">
+                Center Login
+            </a>
         <a class="header-menu-toggle" href="#0">
             <span class="header-menu-text">মেন্যু</span>
             <span class="header-menu-icon"></span>
