--- a/views/center/employee/chak2/employeeChak2Form.ejs
+++ b/views/center/employee/chak2/employeeChak2Form.ejs
@@ -23,18 +23,24 @@
                                         <span></span>
                                     </div>
 
-                                        
                                     <div class="form-group">
                                         <label for="name" class="col-md-3 control-label">পদের নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="name" placeholder="পদের নাম">
+                                            <select name="name" id="name" class="form-control">
+                                                <option value="">পদের নাম</option>
+                                                <% podobiLists.forEach(function(row){ %>
+                                                    <% if (row.podobi != null) {%>
+                                                        <option value=<%= row.podobi %>><%= row.podobi %></option>
+                                                    <% } %>
+                                                <% }) %>
+                                            </select>
                                         </div>
                                     </div>
                                     
                                     <div class="form-group">
                                         <label for="grade" class="col-md-3 control-label">গ্রেড</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="grade" placeholder="গ্রেড">
+                                            <input type="text" class="form-control" name="grade" id="grade" placeholder="গ্রেড">
                                         </div>
                                     </div>
 
@@ -124,3 +130,27 @@
         </div>
     </div>
 <%- include('../../../includes/footer')-%>
+<script>
+    $('#name').on("change",function () {
+        var podobi = $('#name').val();
+        // alert(category)
+        $.ajax({
+            type: "POST",
+            url: "/center/fetchPodobiList",
+            data: {podobi: podobi},
+            datatype: "json",
+            beforeSend: function() {
+                // setting a timeout
+                $('#loading').show();
+                $('#output').hide();
+            },
+            success: function (grade) {
+                $("#grade").val(grade);
+            },
+            complete: function() {
+                $('#loading').hide();
+                $('#output').show();
+            }
+        });
+    });    
+</script>
