--- a/views/center/worker/workerInfo/workerInfoForm.ejs
+++ b/views/center/worker/workerInfo/workerInfoForm.ejs
@@ -17,17 +17,47 @@
                                 </p>
                                 </div>  
                             <div class="panel-body" >
-                                <form action="/center/regularWorkerForms" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
+                                <form action="/center/workerInfoForms" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
                                     <div id="signupalert" style="display:none" class="alert alert-danger">
                                         <p>Error:</p>
                                         <span></span>
                                     </div>
 
+                                    <div class="form-group">
+                                        <div class="col-md-9">
+                                            <label for="podobi">পদবী :</label>
+                                        <select id="podobi" name="podobi" required>
+                                            <option value="নিয়মিত">নিয়মিত</option>
+                                            <option value="অনিয়মিত">অনিয়মিত</option>
+                                        </select>
+                                        </div>
+                                    </div>
                                         
                                     <div class="form-group">
-                                        <label for="name" class="col-md-3 control-label">শ্রমিকের নাম</label>
+                                        <label for="name" class="col-md-3 control-label">নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="name" placeholder="শ্রমিকের নাম">
+                                            <input type="text" class="form-control" name="name" placeholder="নাম">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="fname" class="col-md-3 control-label">পিতার নাম</label>
+                                        <div class="col-md-9">
+                                            <input type="text" class="form-control" name="fname" placeholder="পিতার নাম">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="address" class="col-md-3 control-label">ঠিকানা</label>
+                                        <div class="col-md-9">
+                                            <input type="text" class="form-control" name="address" placeholder="ঠিকানা">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="mobile" class="col-md-3 control-label">মোবাইল নং</label>
+                                        <div class="col-md-9">
+                                            <input type="text" class="form-control" name="mobile" placeholder="মোবাইল নং">
                                         </div>
                                     </div>
                                     
@@ -42,6 +72,13 @@
                                         <label for="nid" class="col-md-3 control-label">এনআইডি নং</label>
                                         <div class="col-md-9">
                                             <input type="text" class="form-control" name="nid" placeholder="এনআইডি নং">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="bank" class="col-md-3 control-label">ব্যাংক একাউন্ট নং</label>
+                                        <div class="col-md-9">
+                                            <input type="text" class="form-control" name="bank" placeholder="ব্যাংক একাউন্ট নং">
                                         </div>
                                     </div>
 
