--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -26,6 +26,9 @@
                     <div class="nav-item">
                         <a href="/pd/newKhorochTable"><i class="ik ik-command"></i><span>খরচের (বিএস্টেটমেন্ট) কোডসমূহ</span></a>
                     </div>
+                    <div class="nav-item">
+                        <a href="/pd/newPodobiTable"><i class="ik ik-command"></i><span>কর্মকর্তা কর্মচারীদের পদবী <br>ও গ্রেডের তালিকা</span></a>
+                    </div>
                     <!-- <div class="nav-item">
                         <a href="/pd/newcropCategoryList"><i class="ik ik-command"></i><span>মাসিক প্রতিবেদনের ক্যাটাগরিসমূহ</span></a>
                     </div> -->
@@ -46,9 +49,7 @@
                     <div class="nav-item">
                         <a href="/pd/rajossho"><i class="ik ik-command"></i><span>রাজস্ব</span></a>
                     </div>
-                    <div class="nav-item">
-                        <a href="/pd/loan"><i class="ik ik-gitlab"></i><span>লোন বিতরণ রিপোর্টিং</span> </a>
-                    </div>
+                    
                     
                     
                     <div class="nav-lavel">চারা কলম মূল্য তালিকা</div>
@@ -81,10 +82,10 @@
 
                 <div class="nav-lavel">শ্রমিকদের ডাটাবেজ</div>
                 <div class="nav-item">
-                    <a href="/pd/regularWorker"><i class="ik ik-package"></i><span>নিয়মিত শ্রমিকদের তথ্য</span></a>
+                    <a href="/pd/workerInfo"><i class="ik ik-package"></i><span>শ্রমিকদের তথ্য</span></a>
                 </div>
                 <div class="nav-item">
-                    <a href="/pd/irregularWorker"><i class="ik ik-box"></i><span>অনিয়মিত শ্রমিকদের তথ্য</span></a>
+                    <a href="/pd/workerNum"><i class="ik ik-box"></i><span>শ্রমিকদের সংখ্যা</span></a>
                 </div>
 
                 
@@ -102,7 +103,9 @@
                     <div class="nav-item">
                         <a href="/pd/revolvingFund"><i class="ik ik-box"></i><span>রিভলভিং ফান্ড</span></a>
                     </div>
-    
+                    <div class="nav-item">
+                        <a href="/pd/loan"><i class="ik ik-gitlab"></i><span>লোন বিতরণ রিপোর্টিং</span> </a>
+                    </div>
                     
     
                     
@@ -152,10 +155,10 @@
 
                 <div class="nav-lavel">শ্রমিকদের ডাটাবেজ</div>
                 <div class="nav-item">
-                    <a href="/center/regularWorker"><i class="ik ik-package"></i><span>নিয়মিত শ্রমিকদের তথ্য</span></a>
+                    <a href="/center/workerInfo"><i class="ik ik-package"></i><span>শ্রমিকদের তথ্য</span></a>
                 </div>
                 <div class="nav-item">
-                    <a href="/center/irregularWorker"><i class="ik ik-box"></i><span>অনিয়মিত শ্রমিকদের তথ্য</span></a>
+                    <a href="/center/workerNum"><i class="ik ik-box"></i><span>শ্রমিকদের সংখ্যা</span></a>
                 </div>
                 
         
@@ -172,6 +175,10 @@
                 </div>
                 <div class="nav-item">
                     <a href="/center/revolvingFund"><i class="ik ik-box"></i><span>রিভলভিং ফান্ড</span></a>
+                </div>
+                <div class="nav-item">
+                    <a href="/center/loan"><i class="ik ik-gitlab"></i><span>লোন বিতরণ রিপোর্টিং</span> </a>
+                    
                 </div>
 
                 
