--- a/views/pd/worker/workerInfo/workerInfo.ejs
+++ b/views/pd/worker/workerInfo/workerInfo.ejs
@@ -1,4 +1,3 @@
-
 <%- include('../../../includes/header')-%>
         <div id="wrapper" class="wrapper" >
             <%- include('../../../includes/topbar')-%>
@@ -15,7 +14,18 @@
                         <div class="card">
                             <div class="card-body">
                                 <div class="row clearfix">
-                                    <div class="col-md-4">
+                                    <div class="col-md-3">
+                                        <label >Choose a Center:</label>
+                                        <select id="center" name="center" required>
+                                            <option value="">Choose center</option>
+                                            <% if (centers.length >0){ %>
+                                                <% centers.forEach(function (center) { %>
+                                                    <option value="<%= center.id %>"><%= center.center %></option>
+                                                <% }) %>
+                                            <% } %>
+                                        </select>
+                                    </div>
+                                    <div class="col-md-3">
                                         <label for="month">মাস:</label>
                                         <select id="month" name="month">
                                             <option value="january">জানুয়ারি</option>
@@ -32,7 +42,7 @@
                                             <option value="december">ডিসেম্বর</option>
                                         </select>
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-md-3">
                                         <label for="year">Choose a year:</label>
                                         <select id="year" name="year">
                                             <option value="">Choose year</option>
@@ -45,7 +55,7 @@
                                             <option value="2023">২০২৩-২৪</option>
                                         </select>
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-md-3">
                                         <!-- Button -->                                        
                                         <div>
                                         <input type="submit" id="submit" name="submit" value="submit" class="btn btn-primary">   
@@ -54,17 +64,18 @@
                                 </div>
                             </div>
                         </div>
-                        
-                        <div class="row mb-2">
+                        <!-- <div class="row mb-2">
                             <div class="col-md-12">
-                                <a href="/center/irregularWorkerForm" class="btn btn-success btn-group-sm ">অনিয়মিত শ্রমিকের তথ্য ফর্ম</a>
+                                <a href="/center/apaForm" class="btn btn-success btn-group-sm ">এপিএ ফর্ম</a>
                             </div>
 
-                        </div>
+                        </div> -->
 
                         <div class="table-responsive" id="output"></div>
 
                         <input type="button" id="btnExport" value="Download PDF" />
+                        <button onclick="exportToExcel('tblexportData', 'নিয়মিত শ্রমিকদের তথ্য')" class="btn btn-success">Export Table Data To Excel File</button>
+
 
                         <div id="output"></div>
         <!--                    <div id="loading" class="loading"><img src="{{ asset('assets/img/icon/loading.gif') }}" alt=""></div>-->
@@ -76,8 +87,41 @@
 
    
 <%- include('../../../includes/footer')-%>
-<script>
+<script type="text/javascript">
+    function exportToExcel(tableID, filename = ''){
+        var downloadurl;
+        var dataFileType = 'application/vnd.ms-excel';
+        var tableSelect = document.getElementById(tableID);
+        var tableHTMLData = tableSelect.outerHTML.replace(/ /g, '%20');
         
+        // Specify file name
+        filename = filename?filename+'.xls':'export_excel_data.xls';
+        
+        // Create download link element
+        downloadurl = document.createElement("a");
+        
+        document.body.appendChild(downloadurl);
+        
+        if(navigator.msSaveOrOpenBlob){
+            var blob = new Blob(['\ufeff', tableHTMLData], {
+                type: dataFileType
+            });
+            navigator.msSaveOrOpenBlob( blob, filename);
+        }else{
+            // Create a link to the file
+            downloadurl.href = 'data:' + dataFileType + ', ' + tableHTMLData;
+        
+            // Setting the file name
+            downloadurl.download = filename;
+            
+            //triggering the function
+            downloadurl.click();
+        }
+    }
+     
+    </script>
+<script>
+                
     $(document).ready(function(){
         
       $('.dropdown a.test').on("click", function(e){
@@ -105,15 +149,14 @@
         });
     });
 
-    $("#wrapper").load( "no url rn",function() {
-        
-        var year = new Date().getFullYear();
+    $( "#content-wrapper" ).load( "no url rn",function() {
+        var year = $('#year').val();
+        var center = $('#center').val();
         var month = $('#month').val();
-
         $.ajax({
             type: "POST",
-            url: "/center/irregularWorkerYear",
-            data: {year: year,month: month},
+            url: "/pd/workerInfoFilter",
+            data: {year: year, center:center,month:month},
             datatype: "json",
             beforeSend: function() {
                 // setting a timeout
@@ -131,14 +174,16 @@
             }
         });
     });
+
 
     $('#submit').on("click",function () {
         var year = $('#year').val();
+        var center = $('#center').val();
         var month = $('#month').val();
         $.ajax({
             type: "POST",
-            url: "/center/irregularWorkerYear",
-            data: {year: year,month:month},
+            url: "/pd/workerInfoFilter",
+            data: {year: year, center:center,month: month},
             datatype: "json",
             beforeSend: function() {
                 // setting a timeout
@@ -155,10 +200,6 @@
             }
         });
     });
-
-    $(document).ready(function() {
-        $('#tblCustomers').DataTable();
-    } );
 
     
 
