--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,12 +68,14 @@
             </div> <!-- end header-nav__content -->
 
         </nav>  <!-- end header-nav -->
-            <a href="/center/login" class=" btn btn--stroke">
-                Center Login
-            </a>
+
+
         <a class="header-menu-toggle" href="#0">
             <span class="header-menu-text">মেন্যু</span>
             <span class="header-menu-icon"></span>
+        </a>
+        <a href="/center/login" class="btn btn-primary mt-5" style="margin: 20px;background: #eaeaea;">
+            Login
         </a>
 
     </header> <!-- end s-header -->
@@ -105,14 +107,14 @@
                     দেশের ১৬ কোটি মানুষের খাদ্য নিরাপত্তা নিশ্চিতকরন ও পুষ্টি সমস্যা সমাধান, মানব সম্পদ উন্নয়ন, কর্মসংস্থান সৃষ্টি, দারিদ্র দূরীকরণ, নারীর ক্ষমতায়ন, জলবায়ুর বিরূপ প্রভাব মোকাবেলায় লাগসই প্রযুক্তি প্রয়োগ, পরিবেশ বান্ধব কৃষি, উচ্চ মূল্য ফসল উৎপাদন ও রপ্তানীমুখী কৃষি পন্য উৎপাদনে কৃষক ও উদ্যোক্তাদের চাহিদামাফিক সেবা প্রদানের লক্ষে গণপ্রজাতন্ত্রী বাংলাদেশ সরকারের কৃষি মন্ত্রনালয়ের আওতাধীন কৃষি সম্প্রসারণ অধিদপ্তরের হর্টিকালচার উইং সুনির্দিষ্ট কর্মপকিল্পনা নিয়ে কাজ করে যাচ্ছে। <br>
                 </h3>
 
-                <div class="home-content__buttons" style="text-align: center;">
-                    <a href="/pd/login" class=" btn btn--stroke">
-                        Admin Login
-                    </a>
-                    <a href="/center/login" class=" btn btn--stroke">
-                        Center Login
-                    </a>
-                </div>
+<!--                <div class="home-content__buttons" style="text-align: center;">-->
+<!--                    <a href="/pd/login" class=" btn btn&#45;&#45;stroke">-->
+<!--                        Admin Login-->
+<!--                    </a>-->
+<!--                    <a href="/center/login" class=" btn btn&#45;&#45;stroke">-->
+<!--                        Center Login-->
+<!--                    </a>-->
+<!--                </div>-->
                
 
             </div>
