central to center

--- a/views/center/signup.ejs
+++ b/views/center/signup.ejs
@@ -68,7 +68,7 @@
               <div class="wrap-input100 validate-input" data-validate="User Name is required" >
                 <input class="input100" type="uname"  name="uname" >
                 <span class="focus-input100"></span>
-                <span class="label-input100">Center Name</span>
+                <span class="label-input100">User Name</span>
               </div>
               
               <div class="wrap-input100 validate-input" data-validate="Password is required">
