--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -2,7 +2,7 @@
     <div class="sidebar-header">
         <a class="header-brand" href="../index.ejs">
             <% console.log("sidebar", locals.type) %> 
-            <span class="text"><%= locals.type %> Admin </span>
+            <span class="text">Hortiulture Wing <br> Central Admin </span>
         </a>
        
       </div>
