--- a/views/center/login.ejs
+++ b/views/center/login.ejs
@@ -44,7 +44,7 @@
               <div class="wrap-input100 validate-input" data-validate="User Name is required" >
                 <input class="input100" type="uname"  name="uname" >
                 <span class="focus-input100"></span>
-                <span class="label-input100">Center Name</span>
+                <span class="label-input100">User Name</span>
               </div>
               
               
@@ -66,7 +66,7 @@
 
               <p class="text-center">For Central Admin Login only, please do signin here!</p>
               <div class="container-login100-form-btn">
-                <a href="/pd/login" class="login100-form-btn">Sign In</a>
+                <a href="/pd/login" class="login100-form-btn">Central Admin Log In</a>
                </button>
              </div>
               
