--- a/views/center/monthlyProgress/monthlyProgressCustomTable.ejs
+++ b/views/center/monthlyProgress/monthlyProgressCustomTable.ejs
@@ -182,8 +182,8 @@
                 <td><%= new Number(currentDaeProdanSum + currentMritoSum).toLocaleString("bn-BD") %></td>
                 <td><%= new Number((currentProductionSum + previousMonthProduction + daePraptiSum + prevYearJer)-(currentDaeProdanSum + currentMritoSum)).toLocaleString("bn-BD") %></td>
                 <td><%= montobboSum %></td>
-                <td><a class="btn btn-primary btn-xs" href="/center/monthlyProgressEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
-                </td>
+                <td></td>
+<!--                <td><a class="btn btn-primary btn-xs" href="/center/monthlyProgressEdit/<%= row.id %>"><i class="fa fa-edit"></i></a></td>-->
             </tr>
         <% }) %>
         </tbody>
