--- a/views/index.ejs
+++ b/views/index.ejs
@@ -173,7 +173,7 @@
                 <select style="font-size: 2.5rem; background: #39b54a;" class="browser-default custom-select" id="center">
                     <option value="all">সব  সেন্টার</option>
                     <% center.forEach((row) => { %>
-                        <option value="<%= row.id %>"> <%= row.uname %> </option>
+                        <option value="<%= row.id %>"> <%= row.center %> </option>
                     <%  }) %>
                   </select>
             </div>
