--- a/views/center/centerInfo/centerEdit.ejs
+++ b/views/center/centerInfo/centerEdit.ejs
@@ -9,7 +9,7 @@
                     <div id="signupbox" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
                         <div class="panel panel-info">
                             <div class="panel-heading">
-                                <div class="panel-title"><h2>সেন্টারের যোগাযোগের তথ্য ফর্ম</h2></div>
+                                <div class="panel-title"><h2>সেন্টারের যোগাযোগ তথ্য ফর্ম</h2></div>
                                 <p><%
                                 if(success !=''){ %>
                                 <%= success %>
@@ -17,62 +17,40 @@
                                 </p>
                                 </div>  
                             <div class="panel-body" >
-                                <form action="/pd/centerForms" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
+                                <form action="/center/centerEditPost/<%=records.id%>" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
                                     <div id="signupalert" style="display:none" class="alert alert-danger">
                                         <p>Error:</p>
                                         <span></span>
-                                    </div>
-
-                                        
-                                    <div class="form-group">
-                                        <label for="center" class="col-md-3 control-label">সেন্টারের নাম</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" name="center" placeholder="সেন্টারের নাম">
-                                        </div>
                                     </div>
                                     
                                     <div class="form-group">
                                         <label for="kormokorta" class="col-md-3 control-label">কর্মকর্তার নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="kormokorta" placeholder="কর্মকর্তার নাম">
+                                            <input type="text" class="form-control" name="kormokorta" placeholder="<%= records.kormokorta %>">
                                         </div>
-                                    </div>
+                                    </div> 
 
                                     <div class="form-group">
                                         <label for="podobi" class="col-md-3 control-label">পদবী</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="podobi" placeholder="পদবী">
+                                            <input type="text" class="form-control" name="podobi" placeholder="<%= records.podobi %>">
                                         </div>
                                     </div>
-
+                                    
                                     <div class="form-group">
                                         <label for="mobile" class="col-md-3 control-label">মোবাইল নং</label>
                                         <div class="col-md-9">
-                                        <input type="text" class="form-control" name="mobile" placeholder="মোবাইল নং">
+                                            <input type="text" class="form-control" name="mobile" placeholder="<%= records.mobile %>">
                                         </div>
-                                    </div>
+                                    </div> 
 
                                     <div class="form-group">
                                         <label for="email" class="col-md-3 control-label">ই-মেইল</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="email" placeholder="ই-মেইল">
+                                            <input type="text" class="form-control" name="email" placeholder="<%= records.email %>">
                                         </div>
                                     </div>
-
-                                   
-                                    <div class="form-group">
-                                        <label for="year" class="col-md-3 control-label">বছর</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" name="year" placeholder="বছর">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="user_id" class="col-md-3 control-label">userid</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" name="user_id" placeholder="id" value="<%= user_id %>">
-                                        </div>
-                                    </div>
+                                    
                                     
                                     <div class="form-group">
                                         <!-- Button -->                                        
