--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -2,7 +2,7 @@
     <div class="sidebar-header">
         <a class="header-brand" href="../index.ejs">
             <% console.log("sidebar", locals.type) %> 
-            <span class="text">Hortiulture Wing <br> Central Admin </span>
+            <span class="text"> Admin </span>
         </a>
        
       </div>
@@ -122,7 +122,10 @@
                 <div class="nav-item active">
                     <a href="/center/dashboard"><i class="ik ik-bar-chart-2"></i><span>ড্যাশবোর্ড</span></a>
                 </div>
-               
+                <div class="nav-item ">
+                    <a href="/center/center"><i class="ik ik-gitlab"></i><span>সেন্টার ইনফরমেশন</span> </a>
+                </div>
+
                 <div class="nav-lavel">প্রতিবেদন</div>
                 <div class="nav-item">
                     <a href="/center/monthlyProgress"><i class="ik ik-package"></i><span>মাসিক প্রতিবেদন</span></a>
