--- a/views/pd/centerInfo/centerEdit.ejs
+++ b/views/pd/centerInfo/centerEdit.ejs
@@ -27,7 +27,7 @@
                                     <div class="form-group">
                                         <label for="center" class="col-md-3 control-label">সেন্টারের নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="center" placeholder="<%= records.center %>">
+                                            <input type="text" class="form-control" name="center" placeholder="" value="<%= records.center %>">
                                         </div>
                                     </div>
                                     
